

syntax = "proto3";
package pb;  // 代码生成的 package 名，e.g. pb
option go_package = "/gen/pb";  // 输出到哪个路径下


// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
// + base.proto                                              +
// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

message BaseResp {
    int64 status_code = 1;
    string status_message = 2;
    int64 service_time = 3;
}


// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
// + note.proto                                              +
// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

message Note {
    int64  note_id     = 1;
    int64  user_id     = 2;
    string user_name   = 3;
    string user_avatar = 4;
    string title       = 5;
    string content     = 6;
    int64  create_time = 7;
}


message CreateNoteRequest {
    string title   = 1;
    string content = 2;
    int64  user_id = 3;
}
message CreateNoteResponse {
    BaseResp base_resp = 1;
}


message DeleteNoteRequest {
    int64  note_id = 1;
    int64  user_id = 2;
}
message DeleteNoteResponse {
    BaseResp base_resp = 1;
}


message UpdateNoteRequest {
    int64           note_id = 1;
    int64           user_id = 2;
    optional string title   = 3;  // 选填，不传则为 nil
    optional string content = 4;
}
message UpdateNoteResponse {
    BaseResp base_resp = 1;
}


message MGetNoteRequest {
    repeated int64 note_ids = 1;
}
message MGetNoteResponse {
    repeated Note notes     = 1;
    BaseResp      base_resp = 2;
}


message QueryNoteRequest {
    int64           user_id    = 1;
    optional string search_key = 2;
    int64           offset     = 3;
    int64           limit      = 4;
}
message QueryNoteResponse {
    repeated Note notes     = 1;
    int64         total     = 2;
    BaseResp      base_resp = 3;
}


service NoteService {
    rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
    rpc MGetNote (MGetNoteRequest) returns (MGetNoteResponse);
    rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse);
    rpc QueryNote (QueryNoteRequest) returns (QueryNoteResponse);
    rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
}


// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
// + user.proto                                              +
// +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

message User {
    int64 user_id = 1;
    string user_name = 2;
    string avatar = 3;
}

message CreateUserRequest {
    string user_name = 1;
    string password = 2;
}

message CreateUserResponse {
    BaseResp base_resp = 1;
}

message MGetUserRequest {
    repeated int64 user_ids = 1;
}

message MGetUserResponse {
    repeated User users = 1;
    BaseResp base_resp = 2;
}

message CheckUserRequest{
    string user_name = 1;
    string password = 2;
}

message CheckUserResponse{
    int64 user_id = 1;
    BaseResp base_resp = 2;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc MGetUser (MGetUserRequest) returns (MGetUserResponse) {}
    rpc CheckUser (CheckUserRequest) returns (CheckUserResponse) {}
}
